--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest server.test.js --verbose --coverage"
+        "test": "jest --verbose --coverage",
+        "lint": "eslint '**/*.js'"
     },
     "repository": {
         "type": "git",
@@ -18,10 +19,17 @@
     },
     "homepage": "https://github.com/laith-401-advanced-javascript/api-server#readme",
     "dependencies": {
+        "@code-fellows/supergoose": "^1.0.11",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jest": "^26.4.2",
         "json-server": "^0.16.1",
+        "mongoose": "^5.10.5",
+        "morgan": "^1.10.0",
         "supertest": "^4.0.2"
+    },
+    "devDependencies": {
+        "eslint": "^7.9.0"
     }
 }
