--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest server.test.js --verbose --coverage"
+        "test": "jest  --verbose --coverage",
+        "lint": "eslint '**/*.js'"
     },
     "repository": {
         "type": "git",
@@ -19,6 +20,7 @@
     "homepage": "https://github.com/laith-401-advanced-javascript/api-server#readme",
     "dependencies": {
         "dotenv": "^8.2.0",
+        "eslint": "^7.9.0",
         "express": "^4.17.1",
         "jest": "^26.4.2",
         "json-server": "^0.16.1",
